--- a/SDF_Portfolio_Piece_StudentNo_Classcode_Group_Name-Surname_SDF11-main/index.html
+++ b/SDF_Portfolio_Piece_StudentNo_Classcode_Group_Name-Surname_SDF11-main/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,10 +14,63 @@
     <link rel="stylesheet" href="./assets/css/loopple/loopple.css">
 </head>
 
-<body class="null">
-    <div class="container flex flex-col mx-auto">
-        <!-- Main container with navigation and header content -->
-    </div>
+<body class="bg-gray-100">
+    <div class="mx-auto bg-white">
+<div>
+    <div class="relative flex flex-wrap items-center justify-between w-full shrink-0">
+        <div class="px-4">
+            <img class="h-6" src="assets\component-1\navigation\cache-bank-logo.png">
+        </div>
+        <div class="hidden md:flex items-center justify-between gap-12 text-black">
+            <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">Product</a>
+            <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">Features</a>
+            <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">Get Started</a>
+            <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">Contact</a>
+            <div class="hidden md:flex items-center gap-8">
+                <button class="text-sm font-normal text-dark-grey-800 hover:text-dark-grey-900"></button>
+        </div>
+        </div>        
+        <div class="hidden md:flex items-center gap-8 p-4">
+            <button class="text-sm font-normal text-dark-grey-800 hover:text-dark-grey-900">Log In</button>
+            <button class="px-4 py-2 text-sm font-bold text-blue bg-green-500 rounded-xl hover:bg-yellow-500">Sign Up</button>
+        </div>
+        <button xlmns="https://www.w3.org/2000/svg" class="md-hidden" p-4 id="mobile-menu-toggle">
+            <svg
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            class="h-6 w-6"
+            fill="none"
+            >
+            <g clip-path="url(#clip0_429_11066)">
+              <path
+                d="M3 6.00092H21M3 12.0009H21M3 18.0009H21"
+                stroke="#292929"
+                stroke-width="2.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </g>
+            <defs>
+              <clipPath id="clip0_429_11066">
+                <rect
+                  width="24"
+                  height="24"
+                  fill="white"
+                  transform="translate(0 0.000915527)"
+                />
+              </clipPath>
+            </defs>
+          </svg>
+        </button>
+        <div class="absolute flex md-hidden flex-col items-start shadow-main justify-center w-full gap-3 overflow-hidden bg-white max-h-screen top-full px-4 py-4" id="mobile-menu">
+            <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">Product</a>
+            <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">Features</a>
+            <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">Get Started</a>
+            <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">Contact</a>
+                <button class="flex items-center px-4 py-2 text-sm font-normal text-black">Log In</button>
+                <button class="flex items-center py-2 text-sm font-bold text-blue bg-green-500 rounded-xl hover:bg-yellow-500">Sign Up</button>
+     </div>
     <div class="w-full">
         <!-- Wide full-width container for additional content -->
     </div>
@@ -28,12 +83,20 @@
     <div class="w-full">
         <!-- Wide full-width container for additional content -->
     </div>
+    </div>
+
     <div class="w-full bg-green-500">
         <!-- Full-width footer container with green background -->
     </div>
+
+    <script>
+        document.getElementById("mobile-menu-toggle").addEventListener("click", function() {document.getElementById("mobile-menu").classList.toggle("hidden");
+      });
+    </script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/countup.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/countto.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/leaflet.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/maps.js"></script>
     <script src="./assets/js/loopple/loopple.js"></script>
 </body>
+</html>
