--- a/SDF_Portfolio_Piece_StudentNo_Classcode_Group_Name-Surname_SDF11-main/index.html
+++ b/SDF_Portfolio_Piece_StudentNo_Classcode_Group_Name-Surname_SDF11-main/index.html
@@ -34,8 +34,8 @@
             <button class="text-sm font-normal text-dark-grey-800 hover:text-dark-grey-900">Log In</button>
             <button class="px-4 py-2 text-sm font-bold text-blue bg-green-500 rounded-xl hover:bg-yellow-500">Sign Up</button>
         </div>
-        <!--Hamburger[]-->
-        <button class="md:hidden p-4" id="mobile-menu-toggle">
+        <!--Hamburger-->
+        <button xlmns="https://www.w3.org/2000/svg" class="md:hidden p-4" id="mobile-menu-toggle">
             <svg
             fill="none"
             viewBox="0 0 24 24"
@@ -255,6 +255,7 @@
   </div>
       <!--End Of Card Section-->
     </div>
+    <!--Component 4-->
     <div class="w-full">
       <div class="container flex flex-col items-center gap-16 mx-auto my-32">
         <div class="grid w-full grid-cols-1 lg:grid-cols-4 md:grid-cols-2 gap-y-8">
@@ -425,8 +426,6 @@
       </div>
     </div>
   </div>
-
-
 
     <script>
         document.getElementById("mobile-menu-toggle").addEventListener("click", function() {document.getElementById("mobile-menu").classList.toggle("hidden");
