--- a/SDF_Portfolio_Piece_StudentNo_Classcode_Group_Name-Surname_SDF11-main/index.html
+++ b/SDF_Portfolio_Piece_StudentNo_Classcode_Group_Name-Surname_SDF11-main/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/theme.css">
     <link rel="stylesheet" href="./assets/css/loopple/loopple.css">
 </head>
-
+<!--Component 1-->
 <body class="bg-gray-100">
     <div class="mx-auto bg-white">
       <div>
